[tool.poetry]
name = "chat-history-shifts"
version = "0.1.0"
description = "This project is devoted to tracking semantic shifts in text messages over time."
authors = ["Vadim Fomin <wadimiusz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gensim = "^4.2.0"
loguru = "^0.6.0"
mypy = "^0.990"
tqdm = "^4.64.1"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
